[package]
name = "ssb-publish"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.8.0"
snafu = "0.6.0"
ssb-legacy-msg-data = { git="https://github.com/sunrise-choir/legacy-msg-data", version = "0.1.1" }
#ssb-legacy-msg = { git="https://github.com/sunrise-choir/ssb-legacy-msg", version = "0.1.1" }
ssb-legacy-msg = { path = "../ssb-legacy-msg"}
ssb-multiformats = {git="https://github.com/sunrise-choir/ssb-multiformats"}
ed25519-dalek = "0.9.1"
rand = "0.6"

[dev-dependencies]
ssb-verify-signatures = {git = "https://github.com/sunrise-choir/ssb-verify-signatures", version = "1.0.0"}
ssb-validate = {git = "https://github.com/sunrise-choir/ssb-validate", version = "1.0.0"}
